  applications with deep call stacks (such as Rails apps)

Bugfixes
--------
* comments at EOF are marked now
* better handling of multiline hashes/arrays
* better handling of end/}: support chained method calls and more expressions
  on the same line
* better handling of heredocs with interpolation

Minor enhancements
------------------
* more readable --text-coverage

Since 0.4.0 (2006-05-22)
========================
Features
--------
* ability to create cross-referenced reports, indicating where methods are
  called from (--callsites)
* more refinements in the heuristics: now several kinds of multi-line quoted
  strings are handled properly
* --include-file to specify files not to be ignored in the report(s)
* implemented a task generator for Rant

Bugfixes
--------
* corrected the LOC counts in the XHTML summaries
* pure-Ruby tracing module works again; was broken in 0.4.0
* RcovTask#ruby_opts fixed; they were being passed to rcov instead of ruby
* solved the DOCTYPE issue (it'd get put at the end of the file under some
  Ruby versions)

Minor enhancements
------------------
* slightly more readable XHTML reports, esp. for IE
* text reports fit in 79 columns so they look OK with cmd.exe
* try to guide the user when all files were considered "uninteresting" by rcov
* the output_dir is preserved in RcovTasks when the user specifies --profile
  via the RCOVOPTS env. var.

Since 0.3.0 (2006-05-05)
========================

Features
--------
* easy automation via Rake using the bundled Rcov::RcovTask
* better heuristics: supports heredocs at last, including variants your editor
  is probably unable to handle, and =begin/=end comments
* --rails option to ignore files under vendor/, enviroment/ and config/
* parts of the runtime exposed and documented for external use
* new color scheme, with alternating shades of the base colors
* -w to set $VERBOSE=true (turns on warnings)
* --text-report and --text-summary
* --sort and --sort-reverse for the summaries and reports