@@ -43,6 +43,7 @@ options.textmode = false
 options.skip = Rcov::Formatter::DEFAULT_OPTS[:ignore]
 options.include = []
 options.html = true
+options.comments_run_by_default = false
 options.test_unit_only = false
 options.sort = :name
 options.sort_reverse = false
@@ -88,6 +89,11 @@ EOF
             "Prepend PATHS to $: (colon separated list)") do |paths|
                 options.loadpaths = paths.split(/:/)
             end
+    opts.on("--[no-]comments",
+            "Mark all comments by default.",
+            "(default: --no-comments)") do |comments_run_p|
+        options.comments_run_by_default = comments_run_p
+    end
     opts.on("--test-unit-only",
             "Only trace code executed in TestCases.") do
         options.test_unit_only = true
@@ -160,8 +166,10 @@ EOF
     end
     opts.on("-D [FILE]", "--text-coverage-diff [FILE]",
             "Compare code coverage with saved state",
-            "in FILE, defaults to coverage.info.") do |file|
+            "in FILE, defaults to coverage.info.",
+            "Implies --comments.") do |file|
         options.textmode = :coverage_diff
+        options.comments_run_by_default = true
         if options.coverage_diff_save
             raise "You shouldn't use --save and --text-coverage-diff at a time."
         end
@@ -277,7 +285,7 @@ make_formatter = lambda do |klass|
     klass.new(:destdir => options.destdir, :color => options.color, 
               :fsr => options.range, :textmode => options.textmode,
               :ignore => options.skip, :dont_ignore => options.include, 
-              :sort => options.sort, 
+              :sort => options.sort,
               :sort_reverse => options.sort_reverse, 
               :output_threshold => options.output_threshold,
               :callsite_analyzer => $rcov_callsite_analyzer,
@@ -285,7 +293,8 @@ make_formatter = lambda do |klass|
               :coverage_diff_file => options.coverage_diff_file,
               :callsites => options.callsites, 
               :cross_references => options.crossrefs,
-              :diff_cmd => options.diff_cmd
+              :diff_cmd => options.diff_cmd,
+              :comments_run_by_default => options.comments_run_by_default
              )
 end
 
